--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,8 @@
 [submodule "ChibiOS"]
 	path = ChibiOS
 	url = https://github.com/rusefi/ChibiOS.git
+[submodule "ChibiOS/"]
+	url = git@github.com:dron0gus/ChibiOS.git
+[submodule "openocd"]
+	path = openocd
+	url = git@github.com:dron0gus/openocd.git
